--- a/src/HotChocolateWithAspIdentity.Application/HotChocolateWithAspIdentity.Application.csproj
+++ b/src/HotChocolateWithAspIdentity.Application/HotChocolateWithAspIdentity.Application.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.17" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HotChocolateWithAspIdentity.Domain\HotChocolateWithAspIdentity.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
