--- a/src/HotChocolateWithAspIdentity.Infrastructure/HotChocolateWithAspIdentity.Infrastructure.csproj
+++ b/src/HotChocolateWithAspIdentity.Infrastructure/HotChocolateWithAspIdentity.Infrastructure.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.17" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HotChocolateWithAspIdentity.Application\HotChocolateWithAspIdentity.Application.csproj" />
+  </ItemGroup>
+
 </Project>
