--- a/src/HotChocolateWithAspIdentity.GraphQL/HotChocolateWithAspIdentity.GraphQL.csproj
+++ b/src/HotChocolateWithAspIdentity.GraphQL/HotChocolateWithAspIdentity.GraphQL.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.17" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.17" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\HotChocolateWithAspIdentity.Application\HotChocolateWithAspIdentity.Application.csproj" />
     <ProjectReference Include="..\HotChocolateWithAspIdentity.Infrastructure\HotChocolateWithAspIdentity.Infrastructure.csproj" />
   </ItemGroup>
