--- a/src/HotChocolateWithAspIdentity.GraphQL/HotChocolateWithAspIdentity.GraphQL.csproj
+++ b/src/HotChocolateWithAspIdentity.GraphQL/HotChocolateWithAspIdentity.GraphQL.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="HotChocolate.AspNetCore" Version="12.10.0" />
+    <PackageReference Include="HotChocolate.Data.EntityFramework" Version="12.10.0" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="5.0.17" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.17" />
