--- a/src/HotChocolateWithAspIdentity.GraphQL/HotChocolateWithAspIdentity.GraphQL.csproj
+++ b/src/HotChocolateWithAspIdentity.GraphQL/HotChocolateWithAspIdentity.GraphQL.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="GraphQL.Server.Ui.Voyager" Version="6.1.0" />
     <PackageReference Include="HotChocolate.AspNetCore" Version="12.10.0" />
+    <PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="12.10.0" />
     <PackageReference Include="HotChocolate.Data.EntityFramework" Version="12.10.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.17" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="5.0.17" />
