using key app settings

--- a/src/HotChocolateWithAspIdentity.GraphQL/appsettings.json
+++ b/src/HotChocolateWithAspIdentity.GraphQL/appsettings.json
@@ -9,5 +9,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=DemoDb;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  },
+  "SupesSecretKey":  "*** Replace Later ***"
 }
